<resources>
    <string name="app_name">Catatan Harian</string>
    <string name="title_splashscreen">Catatan Elektronik</string>
    <string name="nama_file">Nama File :</string>
    <string name="catatan">Catatan :</string>
    <string name="simpan">Simpan</string>
    <string name="add">tambah</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="asal_sekolah">Asal Sekolah</string>
    <string name="alamat">Alamat</string>
    <string name="logout">Logout</string>
</resources>